--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     
     <!-- Custom styles for this template -->
-    <link href="./carousel.css" rel="stylesheet">
+    <link href="./style.css" rel="stylesheet">
   </head>
   <body>
     
@@ -184,46 +184,46 @@
 
       <div class="row pb-5">
 
-        <div class="col">
+        <div class="col-lg-3 p-4 p-lg-3">
           <div class="card">
             <img src="./assets/img/desafio-1.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h5 class="card-title">Desafío 1</h5>
               <p class="card-text">Construyendo un Landing page</p>
-              <a href="#" class="btn btn-primary">Ver repositorio</a>
+              <a href="https://github.com/Lucmunoz/G63-Landing-page" class="btn btn-primary">Ver repositorio</a>
             </div>
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-lg-3 p-4 p-lg-3">
           <div class="card">
             <img src="./assets/img/desafio-2.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title">Desafío 2</h5>
                 <p class="card-text">Iguana page</p>
-                <a href="#" class="btn btn-primary">Ver repositorio</a>
+                <a href="https://github.com/Lucmunoz/g63-iguana-page" class="btn btn-primary">Ver repositorio</a>
               </div>
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-lg-3 p-4 p-lg-3">
           <div class="card">
             <img src="./assets/img/desafio-3.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h5 class="card-title">Desafío 3</h5>
               <p class="card-text">Cuppon</p>
-              <a href="#" class="btn btn-primary">Ver repositorio</a>
+              <a href="https://github.com/Lucmunoz/G63-cuppon" class="btn btn-primary">Ver repositorio</a>
             </div>
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-lg-3 p-4 p-lg-3">
           <div class="card">
             <img src="./assets/img/desafio-4.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title">Desafío 3</h5>
                 <p class="card-text">Termina, Git y Github</p>
-                <a href="#" class="btn btn-primary">Ver repositorio</a>
+                <a href="https://github.com/Lucmunoz/fdsw-github" class="btn btn-primary">Ver repositorio</a>
               </div>
           </div>
         </div>
@@ -232,8 +232,6 @@
   </div>
 
     <hr class="featurette-divider m-0 py-4">
-
-
     <!-- /FIN PORTAFOLIO -->
 
   </div><!-- /.container -->
