--- a/index.html
+++ b/index.html
@@ -186,9 +186,20 @@
 
         <div class="col-lg-3 p-4 p-lg-3">
           <div class="card">
-            <img src="./assets/img/desafio-1.jpg" class="card-img-top" alt="...">
+            <img src="./assets/img/desafio-0.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
               <h5 class="card-title">Desafío 1</h5>
+              <p class="card-text">Curriculum Vitae-HTML</p>
+              <a href="https://github.com/Lucmunoz/G63-CV-HTML" class="btn btn-primary">Ver repositorio</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 p-4 p-lg-3">
+          <div class="card">
+            <img src="./assets/img/desafio-1.jpg" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Desafío 2</h5>
               <p class="card-text">Construyendo un Landing page</p>
               <a href="https://github.com/Lucmunoz/G63-Landing-page" class="btn btn-primary">Ver repositorio</a>
             </div>
@@ -199,7 +210,7 @@
           <div class="card">
             <img src="./assets/img/desafio-2.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <h5 class="card-title">Desafío 2</h5>
+                <h5 class="card-title">Desafío 3</h5>
                 <p class="card-text">Iguana page</p>
                 <a href="https://github.com/Lucmunoz/g63-iguana-page" class="btn btn-primary">Ver repositorio</a>
               </div>
@@ -210,7 +221,7 @@
           <div class="card">
             <img src="./assets/img/desafio-3.jpg" class="card-img-top" alt="...">
             <div class="card-body text-center">
-              <h5 class="card-title">Desafío 3</h5>
+              <h5 class="card-title">Desafío 4</h5>
               <p class="card-text">Cuppon</p>
               <a href="https://github.com/Lucmunoz/G63-cuppon" class="btn btn-primary">Ver repositorio</a>
             </div>
@@ -221,7 +232,7 @@
           <div class="card">
             <img src="./assets/img/desafio-4.jpg" class="card-img-top" alt="...">
               <div class="card-body text-center">
-                <h5 class="card-title">Desafío 3</h5>
+                <h5 class="card-title">Desafío 5</h5>
                 <p class="card-text">Termina, Git y Github</p>
                 <a href="https://github.com/Lucmunoz/fdsw-github" class="btn btn-primary">Ver repositorio</a>
               </div>
