Se agregan certificados y linea desafio latam en formación

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
           <li class="list-group-item">&middot; <span class="fs-4 fw-bold">Universidad de Chile.</span> <br> Diplomatura: Confiabilidad, Mantenimiento y Gestión de activos. <a href="./assets/docs/certificado_uchile.pdf" target="_blank"> Descargar Certificado.</a></li>
           <li class="list-group-item">&middot; <span class="fs-4 fw-bold">Pontificia Universidad Católica.</span> <br> Curso de ingles: Level B1 of CEFR. <a href="./assets/docs/puc_ingles.pdf" target="_blank"> Descargar Certificado.</a></li>
           <li class="list-group-item">&middot; <span class="fs-4 fw-bold">Pontificia Universidad Católica.</span> <br> Curso de manejo intermedio de la planilla de cálculo Excel para Windows. <a href="./assets/docs/puc_excel.pdf" target="_blank"> Descargar Certificado.</a></li>
+          <li class="list-group-item">&middot; <span class="fs-4 fw-bold">Academia desafío Latam.</span> <br>  Desarrollo Full Stack JavasScript <a href="#" target="_blank"> En curso.</a></li>
         </ul>
       </div>
     </div>
